# march-madness-kalshi

./: .env.example  .gitignore  CHAT_PROMPT.md  GO_LIVE_PLAN.md  PROJECT_PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: refresh.yml
data/snapshots/: 2026-03-11T16-45.json  2026-03-11T17-06.json  2026-03-16T04-14.json  2026-03-16T04-16.json  2026-03-16T04-23.json  2026-03-16T04-39.json  2026-03-16T04-44.json  2026-03-16T04-52.json  2026-03-16T04-53.json  2026-03-16T04-58.json  2026-03-16T21-16.json  2026-03-16T21-33.json  2026-03-16T21-36.json  2026-03-16T21-38.json  2026-03-17T06-34.json  2026-03-17T12-39.json  2026-03-17T12-40.json  2026-03-17T12-43.json  2026-03-17T12-44.json  2026-03-17T13-18.json  2026-03-17T13-20.json  2026-03-17T13-30.json  2026-03-17T13-45.json  2026-03-17T14-31.json  2026-03-17T14-35.json  2026-03-17T15-20.json  2026-03-17T15-33.json  2026-03-17T16-13.json  2026-03-17T16-22.json  2026-03-17T16-35.json  2026-03-17T16-37.json  2026-03-17T16-43.json  2026-03-17T16-46.json  2026-03-17T17-00.json  2026-03-17T17-17.json  2026-03-17T17-30.json  2026-03-17T18-17.json  2026-03-17T19-51.json  2026-03-17T20-42.json  2026-03-17T22-13.json  (+406 more)
docs/: index.html
scripts/: discover_tickers.py  refresh.py
src/: config.py  espn_bpi.py  html_gen.py  kalshi_client.py  odds.py  teams.py
templates/: table.html
tests/: test_espn_bpi.py  test_html_gen.py  test_kalshi_futures.py  test_odds.py
