[project]
name = "march-madness-kalshi"
version = "0.1.0"
description = "March Madness survivor tool powered by Kalshi prediction market odds"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "pykalshi[dataframe]>=0.1.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "jinja2>=3.1.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
